tests/ui/const-generics/associated-type-bound-fail.stderr
error[E0277]: the trait bound `u16: Bar<N>` is not satisfied
  --> $DIR/associated-type-bound-fail.rs:9:18
   |
LL |     type Assoc = u16;
   |                  ^^^ the trait `Bar<N>` is not implemented for `u16`
   |
help: the trait `Bar<N>` is not implemented for `u16`
      but trait `Bar<3>` is implemented for it
  --> $DIR/associated-type-bound-fail.rs:7:1
   |
LL | impl Bar<3> for u16 {}
   | ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `Foo::Assoc`
  --> $DIR/associated-type-bound-fail.rs:4:17
   |
LL |     type Assoc: Bar<N>;
   |                 ^^^^^^ required by this bound in `Foo::Assoc`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
